# shellinspector

./: .copier-answers.pre-commit.yaml  .gitignore  .pre-commit-config.yaml  DOCS.md  README.md  docker-compose.yml  pyproject.toml
.github/: workflows
.github/workflows/: main.yml  release.yml  test.yml
docs/: dev.md  env.md  syntax.md
docs/examples/: fail.ispec  local.ispec  local_sessions.ispec  syntax_error.ispec  whoami.inspect
src/shellinspector/: __main__.py  logging.py  parser.py  reporter.py  runner.py
tests/: test_parser.py  test_runner.py
tests/config_tests/parse_global_config/combine/: shellinspector.yaml
tests/data/: envtest.ispec  test.ispec  test_error.ispec  test_error.spec
tests/e2e/: 000_root.ispec  000_simple.inspect  010_create_user.inspect  020_user.ispec  030_whitespace.ispec  040_here_doc.ispec  050_mail.ispec  100_local.ispec  200_state.inspect  210_state_gone.ispec  300_env.ispec  311_env_external_1.ispec  312_env_external_2.ispec  400_logout.inspect  500_envtest.ispec  500_envtest.ispec.env  600_examplestest.ispec  600_examplestest.ispec.examples  700_python.ispec  700_python.ispec.py  800_include.ispec  800_same_level_include.inc  900_fixtures.ispec  901_fixtures.ispec  910_fixtures_scope_run.ispec  911_fixtures_scope_run.ispec  920_no_post_fixture.ispec  921_no_pre_fixture.ispec  950_random_username.ispec  950_si_user.ispec  shellinspector.yaml
tests/e2e/fixtures/: create_user_2_post.ispec  create_user_2_pre.ispec  create_user_post.ispec  create_user_pre.ispec  no_post_fixture_pre.ispec  no_pre_fixture_post.ispec
tests/e2e/includes/: dir_include.ispec  early_dir_include.ispec
tests/fixtures/: create_user_post.ispec  create_user_pre.ispec
tests/fixtures/parse_global_config/combine/: shellinspector.yaml
tests/fixtures/parse_global_config/same_dir/: shellinspector.yaml
tests/fixtures/parse_global_config/with_dotgit_1/: shellinspector.yaml
tests/fixtures/parse_global_config/with_dotgit_2/: shellinspector.yaml
tests/keys/: README.md  id_ed25519  id_ed25519.pub
