[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shellinspector"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "uberspace.de", email = "hallo@uberspace.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pexpect==4.8.0",
  "termcolor==2.2.0",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/uberspace/shellinspector#readme"
Issues = "https://github.com/uberspace/shellinspector/issues"
Source = "https://github.com/uberspace/shellinspector"

[tool.hatch.version]
path = "src/shellinspector/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=shellinspector --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/shellinspector/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.dirs.env]
virtual = ".hatch"
